Fix complete form layout issues

--- a/app/styles/_complete.scss
+++ b/app/styles/_complete.scss
@@ -2,12 +2,6 @@
 	width: 50%;
 	margin: 0 auto;
 
-	input {
-		height: 40px;
-		width: 100%;
-		margin-bottom: 16px;
-	}
-
 	textarea {
 		height: 100px;
 		width: 100%;
@@ -25,14 +19,9 @@
 		margin: 0;
 		padding: 0;
 		border: none;
-	}
-
-	input[type="file"]::-webkit-file-upload-button {
-		border: 2px solid $red;
-		background-color: $white;
-		font-family: $montserrat;
-		color: $red;
-		border-radius: 2px;
+		position:relative;
+		left: -9999px;
+		display: none;
 	}
 
 	.author, .date {
