--- a/app/styles/_posts.scss
+++ b/app/styles/_posts.scss
@@ -28,6 +28,7 @@
 
 			&:hover {
 				background-color: $white;
+				color: $red;
 			}
 		}
 
